# playground

./: .gitignore
AStarPathFinding/: CMakeLists.txt  Map.hpp  PriorityQueue.hpp  UnorderedMap.hpp  Vector2D.cpp  Vector2D.h  main.cpp
eigen/: CMakeLists.txt  main.cpp
go/: go.mod  hello.go
go/static/js/: test.js
go/templates/: footer.html  header.html  view.html
image_matching/: main.py  main_window.py  test.json
io_performance/: CMakeLists.txt  main.c
multithreading_test/: CMakeLists.txt  main.cpp
opencl/: .clang-format  CMakeLists.txt  REAMME.md  main.c  main.cpp
opencl/common/: Blas.hpp  Matrix.hpp  Module.hpp
opencl/kernel/: test.cl  test2.cl
opencl/kernels/: test.cl  test2.cl
opencl/test/: HppTest.hpp  blas_test.c  blast_test.cpp  c_test.c  hpp_test.hpp
opencl/util/: Kernel.hpp  cl_common.h  kernel.hpp
opencl/utils/: cl_common.c  cl_common.h  kernel.c  kernel.h  test.c
py_socket/: Client.py  External.py  MessageQueue.py  Module.py  Server.py  client.py  message.py  server.py
